--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
       <nav class="navbar navbar-fixed-top navbar-expand-sm p-4">
         <img src="assets/icon.png" class="navbar-brand"><p class="text-white m-3">Blogging Land</p>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+        <button class="btn-primary navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
